<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">hello2</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="value">Value</string>
    <string name="hint">Please input a value</string>
    <string name="read">Read</string>
    <string name="write">Write</string>
    <string name="clear">Clear</string>
</resources>
